--- a/ConsoleToMVC/Views/Home/Index.cshtml
+++ b/ConsoleToMVC/Views/Home/Index.cshtml
@@ -11,6 +11,7 @@
     <title>Index</title>
 </head>
 <body>
+    <img src="~/images/logo.png" />
     @{
         var list = new List<int>() { 1, 2, 3, 4, 5, 6 };
     }
