Added RunTime Compilation

--- a/ConsoleToMVC/Views/Home/Index.cshtml
+++ b/ConsoleToMVC/Views/Home/Index.cshtml
@@ -20,7 +20,7 @@
     {
         if (item == 2)
         {
-            <h1>@item</h1>
+            <h1>@item Runtime </h1>
         }
         else
         {
