--- a/ConsoleToMVC/Views/Shared/ContactUs.cshtml
+++ b/ConsoleToMVC/Views/Shared/ContactUs.cshtml
@@ -1,16 +1,7 @@
 ﻿
 @{
-    Layout = null;
+    Layout = "_Layout";
 }
 
-<!DOCTYPE html>
 
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title>ContactUs</title>
-</head>
-<body>
-    SHARED FOLDER CONTACT US
-</body>
-</html>
+<h1 class="h-100"> SHARED FOLDER CONTACT US </h1>
